@@ -34,6 +34,7 @@
 - added man page for im_resize_linear
 - better jpeg-in-tiff YCbCr read (thanks Ole)
 - oops, invalidatefns were not being freed on im__close()
+- VMask() can init from std::vector, so Python can init from []
 
 25/1/08 started 7.14.0
 - bump all version numbers for new stable
